syntax = "proto3";


package top.fengye.rpc.grpc;

service Raft {
  rpc appendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);

  rpc applyVote (ApplyVoteRequest) returns (ApplyVoteResponse);
}

message AppendEntriesRequest {
  string id = 1;
}

message AppendEntriesResponse {
  string id = 1;
}

message ApplyVoteRequest{
  string id = 1;
}

message ApplyVoteResponse {
  string id = 1;
}

